# nightshift

./: .gitignore  Cargo.toml  LICENSE  README.md  backup.bash  diff.py  flake.nix  test_with_logs.py  x.py
.github/workflows/: release.yml  test.yml
src/: database.rs  driver.rs  errors.rs  main.rs  models.rs  pragmas.sql  time.rs  types.rs
src/driver/: attr.rs  flags.rs  handle.rs  mod.rs  request_info.rs
src/migrations/: 001_initial_tables.sql  002_block_compression.sql
src/queries/: block.rs  dir_entry.rs  inode.rs  insert-inode.sql  list-dir.sql  mod.rs  schema.sql
src/queries/sql/: create_dir_entry.sql  create_inode.sql  lookup_inode.sql  schema.sql
testdata/: file1  file20  file5  file50
