[package]
name = "nightshift"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
fuser = { version = "0.14.0", default-features = false, features = [
    "abi-7-10",
] }
libc = "0.2.155"
log = "0.4.22"
lz4_flex = "0.11.3"
rusqlite = { version = "0.32.1", features = [
    # "bundled",
    "bundled-sqlcipher-vendored-openssl",
] }
signal-hook = "0.3.17"
simple_logger = "5.0.0"
slab = "0.4.9"

[dev-dependencies]
test-log = "0.2.16"

[profile.release]
codegen-units = 1
strip = true
lto = "thin"
# debug = true      # For `cargo flamegraph`
